# deutsch-textbook

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  astro.config.mjs  bunfig.toml  eslint.config.js  package-lock.json  package.json  tsconfig.json
.design-sync/: NOTES.md  config.json  conventions.md  ds-entry.tsx  dts-props.mjs  tailwind-entry.css
content/: LICENSE  atlas.yaml
data/: goethe-a1-wortliste.txt  goethe-a2-wortliste.txt  goethe-b1-wortliste.txt  grading-decisions.yaml  grammar-inventory.yaml
docs/: a1-learning-audit.md  a1-linguistic-qa.md  a2-learning-led-program.md  a2-linguistic-qa.md  assist-design.md  authoring-checklists.md  backlog.md  codex-plan-a1-a2.md  coverage-instruments.md  curriculum-a2-b1.md  design.md  focus-tags.md  future-content-directions.md  i18n-design.md  item-authoring.md  lautschrift.md  roadmap.md  runtime-contracts.md
progress/: 2026-07-10.json  README.md
scripts/: coverage-a1.ts  coverage.ts  gen-ipa.ts  grammar-coverage.ts  lang-cost.ts  progress-audit.ts  validate.ts
src/: content.config.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: assist-transport.test.ts  assist.test.ts  broad-retrieval.test.ts  checkpoint.test.ts  cloze.test.ts  contracts.test.ts  coverage.test.ts  deepens.test.ts  discovery-schema.test.ts  drill-serving.test.ts  eligibility.test.ts  evidence.test.ts  focus-tags.test.ts  grading-decisions.test.ts  grammar-coverage.test.ts  i18n-content.test.ts  mastery.test.ts  (+20 more)
(+527 files in other folders)
