[package]
name = "deutsch-atlas"
version = "0.1.0"
description = "Deutsch-Atlas — ein interaktives Lehrbuch"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
